[package]
name = "solana_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
solana-account-decoder = "1.18.26"
solana-program = "1.18.26"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
base64 = { version = "0.21", features = ["alloc"] }
bincode = "1.3"
num_enum = "0.7"
spl-token = "6.0"
spl-associated-token-account = "1.0"
lazy_static = "1.4"
byteorder = "1.4.3"
futures = "0.3"
borsh = "0.10"
borsh-derive = "0.10"
gimli = "0.24.0"
object = "0.27.0"
